# repairwitness-artifact

artifact/: DATA_DICTIONARY.md  README.md  _repairwitness_build_backend.py  external_resources.csv  pyproject.toml  reference_ledger.csv  reproduction.md  requirements.txt  source_manifest.csv  study_protocol.md
artifact/action_suites/: __init__.py  adapters.py  audit.py  authorization_verifier.py  authorization_writer.py  baselines.py  flow.py  frame.py  gates.py  model.py  package.py  qualification.py  registries.py  runtime_guard.py  semantics.py  sources.py  structural_pipeline.py  suite.py  tomlcompat.py
artifact/config/: baseline_lock.json  resource_lock.json
artifact/repairwitness/: __init__.py  audit.py  canonical.py  certification.py  duality.py  interval.py  net.py  oracle.py  orlib.py  package.py  suite.py  weighted_interval.py
artifact/scripts/: audit_artifact.py  clean_replay.py  package_release.py  refresh_release_attestation.py  reproduce.py  run_method_smoke.py  run_observational_actions.py  run_tests_with_coverage.py  smoke.py  solve_suite.py  validate_results.py  verify_adversarial_scalability.py  verify_baseline_fairness.py  verify_coverage_contract.py  verify_offline_install_contract.py  verify_optimization_impact.py  verify_pdf_references.py  verify_public_advisory_overlap.py  verify_safetydb_historical_scope.py  verify_synthetic_advisory_benchmark.py  verify_temporal_scope.py
artifact/tests/: conftest.py  test_adapters_and_semantics.py  test_audit.py  test_authorization.py  test_baselines.py  test_flow.py  test_frame.py  test_model.py  (+10 more)
(+44 files in other folders)
