[build-system]
requires = []
build-backend = "_repairwitness_build_backend"
backend-path = ["."]

[project]
name = "repairwitness"
version = "1.0.0"
description = "Certified action-separating release witnesses for security advisory repair claims"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
dependencies = [
  "numpy>=2.1,<3",
  "scipy>=1.14,<2",
  "packaging==25.0",
  "PyYAML==6.0.3",
]

[project.optional-dependencies]
test = ["pytest==9.0.2", "coverage>=7.6,<8"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
